--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "report-nuxt",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate"
-  },
-  "dependencies": {
-    "axios": "^0.24.0",
-    "core-js": "^3.19.3",
-    "html2canvas": "^1.3.3",
-    "jspdf": "^2.4.0",
-    "nuxt": "^2.15.8",
-    "vue": "^2.6.14",
-    "vue-google-charts": "^0.3.3",
-    "vue-server-renderer": "^2.6.14",
-    "vue-template-compiler": "^2.6.14",
-    "vuetify": "^2.6.1",
-    "webpack": "^4.46.0",
-    "xlsx": "^0.17.4"
-  },
-  "devDependencies": {
-    "@nuxtjs/vuetify": "^1.12.3"
-  }
+    "name": "report-nuxt",
+    "version": "1.0.0",
+    "private": true,
+    "scripts": {
+        "dev": "nuxt",
+        "build": "nuxt build",
+        "start": "nuxt start",
+        "generate": "nuxt generate",
+        "heroku-postbuild": "npm run build"
+    },
+    "dependencies": {
+        "axios": "^0.24.0",
+        "core-js": "^3.19.3",
+        "html2canvas": "^1.3.3",
+        "jspdf": "^2.4.0",
+        "nuxt": "^2.15.8",
+        "vue": "^2.6.14",
+        "vue-google-charts": "^0.3.3",
+        "vue-server-renderer": "^2.6.14",
+        "vue-template-compiler": "^2.6.14",
+        "vuetify": "^2.6.1",
+        "webpack": "^4.46.0",
+        "xlsx": "^0.17.4"
+    },
+    "devDependencies": {
+        "@nuxtjs/vuetify": "^1.12.3"
+    }
 }
